WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24971
Setting style.height = value in javascript doesn't work in tablerows(<tr>)
https://bugs.webkit.org/show_bug.cgi?id=24971
Summary
Setting style.height = value in javascript doesn't work in tablerows(<tr>)
jasneet
Reported
2009-03-31 17:20:11 PDT
I Steps: Go to attached testcase II Issue: When setting the second row to 200px by javascript: In IE/Firefox, the second row is just set to 200px, other rows with their height unchanged. In Chrome/Safari, all rows are reset to default minimum height, regardless the specified height in other rows. III Other Browsers: FF3: OK IE7: OK IV Nightly tested: 42138 Bug in Chromium :
http://code.google.com/p/chromium/issues/detail?id=8355
Attachments
testcase
(397 bytes, text/html)
2009-03-31 17:20 PDT
,
jasneet
no flags
Details
Patch with test case
(5.60 KB, patch)
2009-11-15 22:38 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch with test case
(81.83 KB, patch)
2009-11-16 17:30 PST
,
Daniel Bates
no flags
Details
Formatted Diff
Diff
Patch with test case
(110.93 KB, patch)
2009-11-18 15:14 PST
,
Daniel Bates
hyatt
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
jasneet
Comment 1
2009-03-31 17:20:30 PDT
Created
attachment 29144
[details]
testcase
mitz
Comment 2
2009-08-12 15:20:41 PDT
<
rdar://problem/7138265
>
mitz
Comment 3
2009-10-25 23:43:37 PDT
***
Bug 30756
has been marked as a duplicate of this bug. ***
Daniel Bates
Comment 4
2009-11-15 22:38:10 PST
Created
attachment 43267
[details]
Patch with test case I have only tested this patch under the Mac build, hopefully their won't be platform pixel differences that require the layout test to be rebased per platform (but I'll check tomorrow). Also, want to consult some people on this patch. I am open to suggestions.
Daniel Bates
Comment 5
2009-11-15 22:43:43 PST
CC'ing David Hyatt, Beth Dakin, and Eric Seidel on this issue, since they may have some insight on this patch and on rendering, tables, and CSS in general.
Daniel Bates
Comment 6
2009-11-16 17:30:44 PST
Created
attachment 43334
[details]
Patch with test case Updated the included test case based on file LayoutTests/fast/table/row-height-recalc.html Generated pixel-test and render-tree results for both the Mac and Windows builds.
Daniel Bates
Comment 7
2009-11-16 17:33:23 PST
For your reference, while writing this patch, I consulted section 17.5.3 of the W3C CSS 2.1 spec. <
http://www.w3.org/TR/CSS2/tables.html#height-layout
>.
Daniel Bates
Comment 8
2009-11-16 17:35:06 PST
This bug also affects the Mac build.
Daniel Bates
Comment 9
2009-11-18 15:14:41 PST
Created
attachment 43466
[details]
Patch with test case Added pixel test/render-tree results for Qt build.
Dave Hyatt
Comment 10
2009-11-18 15:23:22 PST
Comment on
attachment 43466
[details]
Patch with test case r=me
Daniel Bates
Comment 11
2009-11-18 15:25:09 PST
Just noticed that I forgot to update the LayoutTest/ChangeLog to reflect the pixel-text/render-tree results for QT. Will update this before I land.
Daniel Bates
Comment 12
2009-11-18 16:06:20 PST
Committed
r51151
: <
http://trac.webkit.org/changeset/51151
>
Daniel Bates
Comment 13
2010-01-24 15:16:48 PST
***
Bug 15151
has been marked as a duplicate of this bug. ***
Daniel Bates
Comment 14
2010-10-10 11:08:55 PDT
***
Bug 19883
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug