2009-11-18  Daniel Bates  <dbates@webkit.org>

Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=24971
        And
        <rdar://problem/7138265>

        Fixes an issue where setting the height of a table row programmatically
        (via JavaScript) causes the table to be improperly rendered because the
        height of each row in the table is not recalculated with respect to the
        CSS height property.

        In particular, programmatically setting the height of some table row causes
        the rows of that table to be rendered with a height equal to the minimum
        height required by the cells in that row, regardless of any specified cell
        heights. Instead, when RenderTableSection::recalcCells is called, the height
        of each row should be set to the CSS height property just as we do in
        RenderTableSection::addChild.

        Test: fast/table/row-height-recalc2.html

        * rendering/RenderTableSection.cpp:
        (WebCore::setRowHeightToRowStyleHeightIfNotRelative): Added.
        (WebCore::RenderTableSection::addChild): Moved code that set row height into
        method WebCore::setRowHeightToRowStyleHeightIfNotRelative.
        (WebCore::RenderTableSection::recalcCells): Modified to call
        WebCore::setRowHeightToRowStyleHeightIfNotRelative.
2009-11-18  Daniel Bates  <dbates@webkit.org>

        Reviewed by Dave Hyatt.

        https://bugs.webkit.org/show_bug.cgi?id=24971
        And
        <rdar://problem/7138265>

        Tests that setting the height of a table row programmatically (via JavaScript)
        recalculates the height of the rows in the table.

        * fast/table/row-height-recalc2.html: Added.
        * platform/mac/fast/table/row-height-recalc2-expected.checksum: Added.
        * platform/mac/fast/table/row-height-recalc2-expected.png: Added.
        * platform/mac/fast/table/row-height-recalc2-expected.txt: Added.
        * platform/qt/fast/table/row-height-recalc2-expected.checksum: Added.
        * platform/qt/fast/table/row-height-recalc2-expected.png: Added.
        * platform/qt/fast/table/row-height-recalc2-expected.txt: Added.
        * platform/win/fast/table/row-height-recalc2-expected.checksum: Added.
        * platform/win/fast/table/row-height-recalc2-expected.png: Added.
        * platform/win/fast/table/row-height-recalc2-expected.txt: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@51151 bbb929c8-8fbe-4397-9dbb-9b2b20218538